--- a/aca2.ipynb
+++ b/aca2.ipynb
@@ -1073,6 +1073,271 @@
     "\n",
     "print(\"Cluster Sizes:\", cluster_sizes)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Punto 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coeficientes del modelo con intervalos de confianza al 95%:\n",
+      "const: -440235.04 (-799030.03, -81440.06)\n",
+      "distancia_centro_comercial: 1242.21 (145.35, 2339.07)\n",
+      "valor_comercial_inmueble: 0.01 (0.00, 0.02)\n",
+      "\n",
+      "R cuadrado ajustado: 0.9944\n",
+      "Valores p:\n",
+      "const                         0.040779\n",
+      "distancia_centro_comercial    0.044170\n",
+      "valor_comercial_inmueble      0.041909\n",
+      "dtype: float64\n",
+      "\n",
+      "Vector de la variable dependiente (valor_metro_cuadrado):\n",
+      "[101423 115277 122570 125809]\n",
+      "\n",
+      "Matriz de variables independientes e intercepto (const, distancia_centro_comercial, valor_comercial_inmueble):\n",
+      "[[1.0000000e+00 9.6000000e+01 4.9429499e+07]\n",
+      " [1.0000000e+00 9.4000000e+01 5.1305103e+07]\n",
+      " [1.0000000e+00 1.0200000e+02 5.1099623e+07]\n",
+      " [1.0000000e+00 1.0600000e+02 5.0772703e+07]]\n",
+      "a 199.49999999999972\n",
+      "Tabla R^2:\n",
+      "|    | R cuadrado ajustado   |\n",
+      "|:---|:----------------------|\n",
+      "| 0  | 0.9944                |\n",
+      "\n",
+      "Tabla ANOVA:\n",
+      "|           | Grados de libertad   | Suma de cuadrados   | Cuadrados medios   | F                 | Valor crítico de F   |\n",
+      "|:----------|:---------------------|:--------------------|:-------------------|:------------------|:---------------------|\n",
+      "| Regresión | 2.0000               | 351447257.2147      | 175723628.60733178 | 268.3944534022845 | 199.49999999999972   |\n",
+      "| Residuos  | 1.0000               | 654721.5353         | 654721.5353364529  |                   |                      |\n",
+      "| Total     | 3.0000               | 352101978.7500      |                    |                   |                      |\n",
+      "\n",
+      "Tabla de parámetros:\n",
+      "|                            | Coeficientes   | Inferior 95%   | Superior 95%   |\n",
+      "|:---------------------------|:---------------|:---------------|:---------------|\n",
+      "| Intercepción               | -440235.04     | -799030.03     | -81440.06      |\n",
+      "| distancia centro comercial | 1242.21        | 145.35         | 2339.07        |\n",
+      "| valor comercial            | 0.01           | 0.00           | 0.02           |\n",
+      "\n",
+      "Valores p:\n",
+      "|                            | 0      |\n",
+      "|:---------------------------|:-------|\n",
+      "| const                      | 0.0408 |\n",
+      "| distancia_centro_comercial | 0.0442 |\n",
+      "| valor_comercial_inmueble   | 0.0419 |\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "from scipy.stats import f\n",
+    "\n",
+    "# Crear un diccionario con los datos proporcionados\n",
+    "data = {\n",
+    "    'valor_metro_cuadrado': [101423, 115277, 122570, 125809],\n",
+    "    'distancia_centro_comercial': [96, 94, 102, 106],\n",
+    "    'valor_comercial_inmueble': [49429499, 51305103, 51099623, 50772703]\n",
+    "}\n",
+    "\n",
+    "# Crear un DataFrame a partir del diccionario\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Agregar una constante al DataFrame para el término de intersección\n",
+    "df = sm.add_constant(df)\n",
+    "\n",
+    "# Ajustar el modelo de regresión lineal múltiple\n",
+    "model = sm.OLS(df['valor_metro_cuadrado'], df[['const', 'distancia_centro_comercial', 'valor_comercial_inmueble']])\n",
+    "results = model.fit()\n",
+    "\n",
+    "# Obtener los coeficientes del modelo, intervalos de confianza al 95%, R cuadrado ajustado y p-values\n",
+    "conf_int = results.conf_int(alpha=0.05)\n",
+    "coef = results.params\n",
+    "pvalues = results.pvalues\n",
+    "rsquared_adj = results.rsquared_adj\n",
+    "\n",
+    "# Imprimir los coeficientes del modelo con sus intervalos de confianza\n",
+    "print(\"Coeficientes del modelo con intervalos de confianza al 95%:\")\n",
+    "for i, row in conf_int.iterrows():\n",
+    "    print(f\"{i}: {coef[i]:.2f} ({row[0]:.2f}, {row[1]:.2f})\")\n",
+    "\n",
+    "# Imprimir el R cuadrado ajustado\n",
+    "print(f\"\\nR cuadrado ajustado: {rsquared_adj:.4f}\")\n",
+    "\n",
+    "# Imprimir los valores p\n",
+    "print(\"Valores p:\")\n",
+    "print(pvalues)\n",
+    "\n",
+    "# Imprimir el vector de la variable dependiente\n",
+    "print(\"\\nVector de la variable dependiente (valor_metro_cuadrado):\")\n",
+    "print(df['valor_metro_cuadrado'].values)\n",
+    "\n",
+    "# Imprimir la matriz de variables independientes e intercepto\n",
+    "print(\"\\nMatriz de variables independientes e intercepto (const, distancia_centro_comercial, valor_comercial_inmueble):\")\n",
+    "print(df[['const', 'distancia_centro_comercial', 'valor_comercial_inmueble']].values)\n",
+    "\n",
+    "\n",
+    "ssr = results.ess  # Suma de cuadrados de la regresión\n",
+    "sse = results.ssr  # Suma de cuadrados de los residuos\n",
+    "sst = results.centered_tss  # Suma de cuadrados total\n",
+    "\n",
+    "df_model = results.df_model  # Grados de libertad del modelo\n",
+    "df_resid = results.df_resid  # Grados de libertad de los residuos\n",
+    "df_total = df.shape[0] - 1  # Grados de libertad totales\n",
+    "\n",
+    "msr = ssr / df_model  # Cuadrados medios de la regresión\n",
+    "mse = sse / df_resid  # Cuadrados medios de los residuos\n",
+    "\n",
+    "f_statistic = msr / mse  # Estadístico F\n",
+    "f_critical = f.ppf(1 - 0.05, df_model, df_resid)  # Valor crítico de F\n",
+    "print(\"a\",f_critical)\n",
+    "params = results.params  # Coeficientes del modelo\n",
+    "conf_int = results.conf_int(alpha=0.05)  # Intervalos de confianza al 95%\n",
+    "pvalues = results.pvalues\n",
+    "\n",
+    "\n",
+    "# Crear DataFrames para las tablas\n",
+    "squared_table = pd.DataFrame({'R cuadrado ajustado': [rsquared_adj]})\n",
+    "anova_table = pd.DataFrame({\n",
+    "    'Grados de libertad': [df_model, df_resid, df_total],\n",
+    "    'Suma de cuadrados': [ssr, sse, sst],\n",
+    "    'Cuadrados medios': [msr, mse, ''],\n",
+    "    'F': [f_statistic, '', ''],\n",
+    "    'Valor crítico de F': [f_critical, '', '']\n",
+    "}, index=['Regresión', 'Residuos', 'Total'])\n",
+    "params_table = pd.DataFrame({'Coeficientes': params, 'Inferior 95%': conf_int[0], 'Superior 95%': conf_int[1]})\n",
+    "params_table.index = ['Intercepción', 'distancia centro comercial', 'valor comercial']\n",
+    "\n",
+    "# Imprimir las tablas\n",
+    "print(\"Tabla R^2:\")\n",
+    "print(squared_table.to_markdown(numalign='left', stralign='left', floatfmt='.4f'))\n",
+    "\n",
+    "print(\"\\nTabla ANOVA:\")\n",
+    "print(anova_table.to_markdown(numalign='left', stralign='left', floatfmt='.4f'))\n",
+    "\n",
+    "print(\"\\nTabla de parámetros:\")\n",
+    "print(params_table.to_markdown(numalign='left', stralign='left', floatfmt='.2f'))\n",
+    "\n",
+    "print(\"\\nValores p:\")\n",
+    "print(pvalues.to_markdown(numalign='left', stralign='left', floatfmt='.4f'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "punto 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.430419\n",
+      "         Iterations 7\n",
+      "                           Logit Regression Results                           \n",
+      "==============================================================================\n",
+      "Dep. Variable:                     14   No. Observations:                   70\n",
+      "Model:                          Logit   Df Residuals:                       55\n",
+      "Method:                           MLE   Df Model:                           14\n",
+      "Date:                Sat, 29 Jun 2024   Pseudo R-squ.:                  0.3790\n",
+      "Time:                        13:09:34   Log-Likelihood:                -30.129\n",
+      "converged:                       True   LL-Null:                       -48.520\n",
+      "Covariance Type:            nonrobust   LLR p-value:                 0.0007959\n",
+      "==============================================================================\n",
+      "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const         -3.9737      2.669     -1.489      0.137      -9.206       1.258\n",
+      "x1             0.1867      0.062      3.016      0.003       0.065       0.308\n",
+      "x2            -0.5166      0.405     -1.276      0.202      -1.310       0.277\n",
+      "x3             0.0019      0.001      1.536      0.124      -0.001       0.004\n",
+      "x4            -0.0011      0.001     -0.858      0.391      -0.004       0.001\n",
+      "x5            -0.7659      0.443     -1.731      0.083      -1.633       0.101\n",
+      "x6             0.3609      0.548      0.659      0.510      -0.713       1.434\n",
+      "x7            -1.4509      0.919     -1.579      0.114      -3.251       0.350\n",
+      "x8            -2.4173      1.685     -1.434      0.151      -5.720       0.886\n",
+      "x9            -2.2446      1.254     -1.790      0.073      -4.702       0.213\n",
+      "x10           -0.4851      1.092     -0.444      0.657      -2.626       1.656\n",
+      "x11           -0.8607      1.954     -0.441      0.660      -4.690       2.968\n",
+      "x12           -0.5117      1.509     -0.339      0.735      -3.469       2.446\n",
+      "x13            0.1965      1.692      0.116      0.908      -3.119       3.512\n",
+      "x14           -0.5176      1.646     -0.314      0.753      -3.744       2.709\n",
+      "==============================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "# Load the data from the image into a DataFrame\n",
+    "df = pd.read_excel('DATOS.xlsx')\n",
+    "\n",
+    "# Drop irrelevant columns\n",
+    "df = df.drop(columns=['N', 'PESO_ANTES_DIETA', 'PESO_DESPUES_DIETA', 'CALIFICACION_SERVIVCIO_TRANSPORTE', 'TIEMPO_RECORRIDO', 'GASTO_DIARIO_TRANSPORTE', 'PERSONAS_EDAD_TRABAJAR'])\n",
+    "\n",
+    "# Rename columns for consistency\n",
+    "df = df.rename(columns={'NUMERO_PERSONAS_EDAD_TRABAJAR': 'PERSONAS_TRABAJANDO'})\n",
+    "\n",
+    "# Convert categorical variables to dummy variables\n",
+    "df = pd.get_dummies(df, columns=['GENERO', 'ESTADO_CIVIL', 'NIVEL_EDUCATIVO'], drop_first=True)\n",
+    "\n",
+    "# Convertir X_train y y_train a arrays de NumPy\n",
+    "X_train_np = np.asarray(X_train, dtype=float)\n",
+    "y_train_np = np.asarray(y_train, dtype=float)\n",
+    "\n",
+    "#Ajustar el modelo con los arrays de NumPy\n",
+    "model = sm.Logit(y_train_np, X_train_np).fit()\n",
+    "\n",
+    "# Handle missing values (if any)\n",
+    "df = df.fillna(df.mode().iloc[0])  # Fill with mode\n",
+    "\n",
+    "# Define features (X) and target variable (y)\n",
+    "X = df.drop('VIVIENDA', axis=1)\n",
+    "y = df['VIVIENDA'].map({'SI': 1, 'NO': 0})  # Convert to binary\n",
+    "\n",
+    "# Split data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Add constant to the predictor variables\n",
+    "X_train = sm.add_constant(X_train)\n",
+    "\n",
+    "# Print the model summary\n",
+    "print(model.summary(14))\n"
+   ]
   }
  ],
  "metadata": {
