--- a/aca2.ipynb
+++ b/aca2.ipynb
@@ -1338,6 +1338,34 @@
     "# Print the model summary\n",
     "print(model.summary(14))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Current function value: 0.430419 (Valor actual de la función: 0.430419)\n",
+    "\n",
+    "Este es el valor de la función Log-Likelihood (logaritmo de verosimilitud) en la iteración final del proceso de optimización. La función Log-Likelihood mide qué tan bien el modelo se ajusta a los datos. Valores más bajos indican un mejor ajuste. En tu caso, el valor final es 0.430419, que es el mejor ajuste que el algoritmo pudo lograr.\n",
+    "Iterations: 7 (Iteraciones: 7)\n",
+    "\n",
+    "Esto indica que el algoritmo de optimización tomó 7 pasos para alcanzar la solución. El número de iteraciones requeridas puede variar según la complejidad del modelo, los datos y el método de optimización utilizado.\n",
+    "Logit Regression Results: (Resultados de la Regresión Logística)\n",
+    "\n",
+    "La tabla proporciona detalles sobre los coeficientes estimados para cada variable predictora (x1, x2, ..., x14), junto con sus errores estándar, estadísticas z, valores p e intervalos de confianza.\n",
+    "El coeficiente \"const\" representa el intercepto del modelo.\n",
+    "Interpretación:\n",
+    "\n",
+    "Pseudo R-squ.: 0.3790: (Pseudo R-cuadrado: 0.3790) Esto indica que el modelo explica aproximadamente el 37.9% de la variabilidad en la variable de resultado (VIVIENDA).\n",
+    "LLR p-value: 0.0007959: Este es el valor p de la prueba de razón de verosimilitud, que evalúa la significancia general del modelo. En este caso, el valor p es menor que 0.05, lo que sugiere que el modelo es estadísticamente significativo (es decir, se ajusta a los datos mejor que un modelo sin predictores).\n",
+    "Coeficientes y valores p:\n",
+    "Los coeficientes representan el cambio estimado en el logaritmo de las probabilidades del resultado (tener una vivienda) asociado con un cambio de una unidad en la variable predictora correspondiente, manteniendo todas las demás variables constantes.\n",
+    "Los valores p indican la significancia estadística de cada coeficiente. Un valor p menor que 0.05 sugiere que la variable predictora está significativamente asociada con el resultado. En tu modelo, solo x1 (que corresponde a una de tus variables categóricas codificadas como dummy) parece ser estadísticamente significativa.\n",
+    "Consideraciones importantes:\n",
+    "\n",
+    "Convergencia: Si bien la convergencia exitosa es positiva, no garantiza que el modelo sea el mejor posible o que represente con precisión la relación subyacente en la población.\n",
+    "Cuasi-Separación: La salida no indica cuasi-separación (la advertencia vista en las salidas anteriores no está presente aquí), lo cual es una buena noticia, ya que sugiere que las estimaciones del modelo son más confiables.\n",
+    "Ajuste e Interpretación del Modelo: Si bien el modelo es estadísticamente significativo, su poder explicativo (Pseudo R-cuadrado) es moderado. Debes interpretar cuidadosamente los coeficientes y considerar si el modelo necesita más refinamiento."
+   ]
   }
  ],
  "metadata": {
